--- a/src/login.css
+++ b/src/login.css
@@ -7,7 +7,18 @@ body {
 
 .sign-up {
     margin-top: 30px;
-    width: 300px;
-    height: 500px;
+    width: 500px;
+    height: 800px;
     background-color: #fff;
+}
+
+#options{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+a{
+    margin: 20px;
 }
