--- a/src/login.css
+++ b/src/login.css
@@ -11,3 +11,19 @@ body {
     height: 500px;
     background-color: #fff;
 }
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    color: black;
+    font-size: 0.3cm;
+}
+
+.login-button {
+    border: #F94949;
+    background-color: #F94949;
+    border-radius: 10px;
+    width: 150px;
+    height: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
