--- a/src/login.css
+++ b/src/login.css
@@ -16,6 +16,8 @@ h1 {
     font-style: normal;
     color: black;
     font-size: 0.3cm;
+    margin-top: 70px;
+    margin-bottom: 10px;
 }
 
 .login-button {
@@ -26,7 +28,20 @@ h1 {
     height: 20px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 20px;
 }
+.form-container {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+input {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 .logo-container {
     display: flex;
     align-items: center;
