Adiciona tela de denúncias

--- a/src/base.css
+++ b/src/base.css
@@ -6,6 +6,14 @@
   --info: rgba(0, 0, 255, 0.75);
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f94949;
+}
+
 .text-main-color {
   color: var(--main);
 }
