fix denuncias page style

--- a/src/base.css
+++ b/src/base.css
@@ -66,3 +66,15 @@ body {
   cursor: pointer;
 }
 
+.menu-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 10px;
+  background-color: #e9e9e9;
+  border-radius: 10px;
+  padding: 10px;
+}
