--- a/src/denuncias/denuncias.css
+++ b/src/denuncias/denuncias.css
@@ -4,8 +4,12 @@ body {
 }
 
 .denunciations {
-  margin: 10rem auto;
+  margin: 0 auto;
   padding: 3rem;
+}
+
+.denunciations header, .denunciations main {
+  padding: 5px 30px 5px 30px;
 }
 
 .denunciations header h1 {
@@ -16,6 +20,7 @@ body {
 }
 
 .form-search {
+  width: 100%;
   margin: 1rem 0;
 }
 
@@ -27,6 +32,11 @@ body {
 .form-search form {
   display: flex;
   justify-content: center;
+}
+
+.form-search .input-base {
+  width: 100%;
+  padding: 15px;
 }
 
 .button-search {
@@ -66,14 +76,24 @@ body {
   padding: 0.3rem;
 }
 
+.filters .button-base {
+  border-radius: 20px;
+  width: 20%;
+  height: 2rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 main {
   margin: 1rem 0;
 }
 
 table {
-  margin: 1rem 0;
+  /* margin: 1rem 0;
   border-collapse: collapse;
   border-spacing: 0;
+  */
   width: 100%;
   background-color: #fff;
   border-radius: 10px;
@@ -82,6 +102,7 @@ table {
 
 th,
 td {
+  margin: 1rem 0;
   text-align: center;
   padding: 0.5rem 0;
 }
@@ -104,25 +125,87 @@ tr:nth-child(even) {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 1.5rem;
+  margin-bottom: 1.25rem;
+}
+
+@media (max-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .denunciations {
+    width: 15rem;
+    height: 80vh;
+  }
+
+  .denunciations header, .denunciations main {
+    padding: 0px 0px 0px 0px;
+  }
+}
+
+@media (min-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .denunciations {
+    width: 20rem;
+    height: 82vh;
+  }
 }
 
 @media (min-width: 600px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
   .denunciations {
-    width: 25rem;
+    width: 30rem;
+    height: 80vh;
+  }
+  .form-search .input-base {
+    width: 100%;
+    padding: 15px;  
   }
 }
+
 @media (min-width: 800px) {
   /* tablet, landscape iPad, lo-res laptops ands desktops */
   .denunciations {
-    width: 30rem;
+    width: 40rem;
+    height: 80vh;
   }
+  .form-search form {
+    display: flex;
+    justify-content: left;
+  } 
 }
+
 @media (min-width: 1024px) {
   /* big landscape tablets, laptops, and desktops */
-  /* .sign-up {
+  .denunciations {
+    width: 55rem;
+    height: 80vh;
+  }
+  .form-search form {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-  } */
+    justify-content: left;
+  }
+  .form-search .input-base {
+    width: 80%;
+    padding: 15px;  
+  }
+}
+
+@media (min-width: 1280px) {
+  .denunciations {
+    width: 65rem;
+    height:85vh;
+  }
+  .form-search form {
+    display: flex;
+    justify-content: left;
+  }
+  .form-search .input-base {
+    width: 80%;
+    padding: 15px;  
+  }
+  .denunciations header{
+    padding: 5px 120px 5px 120px;
+  }
+  .denunciations main {
+    padding: 0px 50px 0px 50px;
+  }
 }
