--- a/src/denuncias-convidado/denuncias-convidado.css
+++ b/src/denuncias-convidado/denuncias-convidado.css
@@ -2,3 +2,209 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+.guest-denunciations {
+  margin: 10rem auto;
+  padding: 3rem;
+}
+
+.guest-denunciations header, .guest-denunciations main {
+  padding: 5px 30px 5px 30px;
+}
+
+.guest-denunciations header h1 {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.form-search {
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.form-search p {
+  margin: 1rem 0;
+  font-weight: 600;
+}
+
+.form-search form {
+  display: flex;
+  justify-content: center;
+}
+
+.form-search .input-base {
+  width: 100%;
+  padding: 15px;
+}
+
+.button-search {
+  margin-left: 1rem;
+  display: inline-block;
+  position: relative;
+  width: 2rem;
+  border-radius: 10px;
+  padding: 0.3rem;
+  background-color: var(--main);
+  color: white;
+}
+
+.button-search .img-search {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.filters p {
+  margin-right: 1rem;
+  font-weight: 600;
+}
+
+.filters button {
+  margin: 0 0.2rem;
+  border: none;
+  padding: 0.3rem;
+}
+
+.filters .button-base {
+  border-radius: 20px;
+  width: 20%;
+  height: 2rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+main {
+  margin: 1rem 0;
+}
+
+table {
+  /* margin: 1rem 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+  */
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
+}
+
+th,
+td {
+  margin: 1rem 0;
+  text-align: center;
+  padding: 0.5rem 0;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.table-header {
+  font-weight: 600;
+}
+
+.table-header th {
+  text-align: left;
+  padding-left: 0.5rem;
+}
+
+.table-footer {
+  /* margin: 1rem 0; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+@media (max-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .guest-denunciations {
+    width: 15rem;
+    height: 80vh;
+  }
+
+  .guest-denunciations header, .guest-denunciations main {
+    padding: 0px 0px 0px 0px;
+  }
+}
+
+@media (min-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .guest-denunciations {
+    width: 20rem;
+    height: 82vh;
+  }
+}
+
+@media (min-width: 600px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .guest-denunciations {
+    width: 30rem;
+    height: 80vh;
+  }
+  .form-search .input-base {
+    width: 100%;
+    padding: 15px;  
+  }
+}
+
+@media (min-width: 800px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .guest-denunciations {
+    width: 40rem;
+    height: 80vh;
+  }
+  .form-search form {
+    display: flex;
+    justify-content: left;
+  } 
+}
+
+@media (min-width: 1024px) {
+  /* big landscape tablets, laptops, and desktops */
+  .guest-denunciations {
+    width: 55rem;
+    height: 80vh;
+  }
+  .form-search form {
+    display: flex;
+    justify-content: left;
+  }
+  .form-search .input-base {
+    width: 80%;
+    padding: 15px;  
+  }
+}
+
+@media (min-width: 1280px) {
+  .guest-denunciations {
+    width: 65rem;
+    height: 80vh;
+  }
+  .form-search form {
+    display: flex;
+    justify-content: left;
+  }
+  .form-search .input-base {
+    width: 80%;
+    padding: 15px;  
+  }
+  .guest-denunciations header{
+    padding: 10px 120px 10px 120px;
+  }
+  .guest-denunciations main {
+    padding: 10px 50px 10px 50px;
+  }
+}
