--- a/src/recuperar-senha/recuperar-senha.css
+++ b/src/recuperar-senha/recuperar-senha.css
@@ -1,41 +1,43 @@
 body {
-    
     background-color: #F94949;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .sign-up {
+    align-items: center;
     margin-top: 30px;
     width: 500px;
     height: 800px;
     background-color: #fff;
     flex-direction: column;
     display: flex;
-    align-items: center;
     border-radius: 10px;
 }
-
 h1 {
+    margin-top: 120px;
     font-family: Arial, Helvetica, sans-serif;
-    color: red;
+    color: #F94949;
+    text-align: center;
 }
 .enviar-button {
+    margin-top: 80px;
     border: #F94949;
     background-color: #F94949;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    height: 50px;
-    width: 280px;
-    border-radius: 35px;
     font-size: 25px;
+    height: 55px;
+    width: 265px;
+    border-radius: 120px;
 }
-input {      
-    margin: 0%;
+input {     
+    align-items: center;
     margin-top: 25px;
     border-radius: 15px;
     height: 40px;
-    width: 250px;
+    width: 260px;
     color: black;
     border-width: 1px;
 }
+
