--- a/src/cadastro/cadastro.css
+++ b/src/cadastro/cadastro.css
@@ -60,5 +60,24 @@ body {
   font-size: 40px;
   margin-left: 5px;
 }
-
+@media (min-width: 600px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .sign-up {
+    width: 25rem;
+  }
+}
+@media (min-width: 800px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .sign-up {
+    width: 30rem;
+  }
+}
+@media (min-width: 1024px) {
+  /* big landscape tablets, laptops, and desktops */
+  .sign-up {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
 
