--- a/src/recuperar-senha/recuperar-senha.css
+++ b/src/recuperar-senha/recuperar-senha.css
@@ -1,43 +1,51 @@
 body {
-    background-color: #F94949;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
-.sign-up {
-    align-items: center;
-    margin-top: 30px;
-    width: 500px;
-    height: 800px;
-    background-color: #fff;
-    flex-direction: column;
-    display: flex;
-    border-radius: 10px;
-}
-h1 {
-    margin-top: 120px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #F94949;
+.recup-senha {
+    margin: 10rem auto;
+    padding: 3rem;
     text-align: center;
 }
-.enviar-button {
-    margin-top: 80px;
-    border: #F94949;
-    background-color: #F94949;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    height: 55px;
-    width: 265px;
-    border-radius: 120px;
+h1 {
+    font-weight: bold;
+    font-size: 32px;
+    color: #F94949;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-input {     
-    align-items: center;
-    margin-top: 25px;
-    border-radius: 15px;
+#novasenha {
+    margin-top: 50px;
+    border-radius: 10px;
     height: 40px;
     width: 260px;
-    color: black;
     border-width: 1px;
 }
-
+#insiranovamente {
+    margin-top: 25px;
+    border-radius: 10px;
+    height: 40px;
+    width: 260px;
+    border-width: 1px;
+}
+#botaosalvar {
+    font-size: 20px;
+    margin-top: 85px;
+    border-radius: 35px;
+    height: 40px;
+    width: 260px;
+    color: white;
+    background-color: #F94949;
+    border: 0;
+}
+@media (min-width: 600px) {
+    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+    .recup-senha {
+      width: 25rem;
+    }
+  }
+  @media (min-width: 800px) {
+    /* tablet, landscape iPad, lo-res laptops ands desktops */
+    .recup-senha {
+      width: 30rem;
+    }
+  }
