--- a/src/recuperar-senha/recuperar-senha.css
+++ b/src/recuperar-senha/recuperar-senha.css
@@ -2,50 +2,43 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
+
 .recup-senha {
     margin: 10rem auto;
     padding: 3rem;
     text-align: center;
 }
+
 h1 {
-    font-weight: bold;
-    font-size: 32px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-size: 1.2rem;
     color: #F94949;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#novasenha {
-    margin-top: 50px;
-    border-radius: 10px;
-    height: 40px;
-    width: 260px;
-    border-width: 1px;
+
+.button-base {
+    margin-top: 15px;
+    height: 30px;
+    width: 100px;
 }
-#insiranovamente {
-    margin-top: 25px;
-    border-radius: 10px;
-    height: 40px;
-    width: 260px;
-    border-width: 1px;
+
+.input-base {
+    margin-top: 15px;
 }
-#botaosalvar {
-    font-size: 20px;
-    margin-top: 85px;
-    border-radius: 35px;
-    height: 40px;
-    width: 260px;
-    color: white;
-    background-color: #F94949;
-    border: 0;
-}
+
 @media (min-width: 600px) {
+
     /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
     .recup-senha {
-      width: 25rem;
+        width: 25rem;
     }
-  }
-  @media (min-width: 800px) {
+}
+
+@media (min-width: 800px) {
+
     /* tablet, landscape iPad, lo-res laptops ands desktops */
     .recup-senha {
-      width: 30rem;
+        width: 30rem;
     }
-  }
+}
