--- a/src/criar denuncia/criarD.css
+++ b/src/criar denuncia/criarD.css
@@ -29,6 +29,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: left;
+    width: 100%;
+    margin: 1rem 0;
+  }
+  .menu-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    width: 95%;
+    height: 7;
+    margin-bottom: 10px;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+    padding: 10px;
   }
   
   .form-container {
@@ -65,33 +79,13 @@ body {
     font-size: 40px;
     margin-left: 5px;
   }
-  .anexar
+  #anexar
   {
+font-weight: bold;
+
+  }
    
-  }
     
-   
-    
-  
-  @media (min-width: 600px) {
-    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-    .sign-up {
-      width: 25rem;
-    }
-  }
-  @media (min-width: 800px) {
-    /* tablet, landscape iPad, lo-res laptops ands desktops */
-    .sign-up {
-      width: 30rem;
-    }
-  }
-  @media (min-width: 1024px) {
-    /* big landscape tablets, laptops, and desktops */
-    .sign-up {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-    }
-  }
+
   
   
