--- a/src/adicionar-comentarios/adicionar-comentarios.css
+++ b/src/adicionar-comentarios/adicionar-comentarios.css
@@ -1,7 +1,5 @@
 .sign-up {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 3rem;
 }
 
 .sign-up p {
@@ -21,21 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: left;
-  width: 100%;
-  margin: 1rem 0;
-}
-.menu-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 10px;
-  width: 95%;
-  height: 7;
-  margin-bottom: 10px;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-  padding: 10px;
+  justify-content: center;
 }
 
 .form-container {
@@ -54,9 +38,6 @@
   justify-content: center;
   text-align: center;
 }
-.button-base {
-  background-color: #f94949;
-}
 
 .logo-container {
   display: flex;
@@ -69,7 +50,4 @@
   font-weight: 400;
   font-size: 40px;
   margin-left: 5px;
-}
-#anexar {
-  font-weight: bold;
 }
