--- a/src/base.css
+++ b/src/base.css
@@ -1,5 +1,6 @@
 :root {
-  --main: #f94949;
+  --theme: #f94949;
+  --background: #f5f5f5;
   --success: green;
   --warning: --yellow;
   --error: red;
@@ -11,16 +12,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f94949;
+  background-color: var(--background);
 }
 
 .text-main-color {
-  color: var(--main);
+  color: var(--theme);
 }
 
 .bg-main-color {
-  border: var(--main);
-  background-color: var(--main);
+  border: var(--theme);
+  background-color: var(--theme);
   color: #fff;
 }
 
@@ -54,7 +55,7 @@ body {
 }
 
 .input-base:focus {
-  outline-color: var(--main);
+  outline-color: var(--theme);
 }
 
 .button-base {
@@ -77,4 +78,130 @@ body {
   background-color: #e9e9e9;
   border-radius: 10px;
   padding: 10px;
+}
+
+/*
+  @@@ DESKTOP TEMPLATE STYLES @@@
+*/
+
+.left-navbar {
+  display: flex;
+  flex-direction: column;
+  background-color: #f94949;
+  height: 100%;
+  width: 7rem;
+  padding: 1rem;
+}
+
+.logo-nav {
+  display: flex;
+  flex-direction: column;
+  text-align: end;
+}
+
+.logo-nav h4 {
+  margin-right: -0.25rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  text-align: right;
+}
+
+.logo-nav img {
+  cursor: pointer;
+  height: 6rem;
+  width: 6rem;
+}
+
+.nav-options {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+}
+
+.home-nav,
+.user-denunciations-nav,
+.logout-nav {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.home-nav p,
+.user-denunciations-nav p,
+.logout-nav p {
+  margin-top: 0.5rem;
+}
+
+.home-nav p:hover,
+.user-denunciations-nav p:hover,
+.logout-nav p:hover {
+  margin-top: 0.5rem;
+  text-shadow: rgba(0, 0, 0, 0.3) 0 0 1px;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.app-container {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.top-navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 1rem;
+  height: 10%;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.top-navbar p {
+  margin-right: 1rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.top-navbar img {
+  cursor: pointer;
+  margin-right: 1rem;
+  height: 35px;
+  width: 35px;
+}
+
+.card-app {
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 0 10px;
+  width: 80%;
+  height: 90%;
+  background-color: #ffffff;
+}
+
+svg:hover path {
+  fill: #fce57e;
+}
+
+.card-head-border {
+  height: 20%;
+  background-color: #ecebeb;
+}
+
+.card-footer-border {
+  height: 10%;
+  background-color: #ecebeb;
 }
