--- a/src/recuperar-senha/recuperar-senha.css
+++ b/src/recuperar-senha/recuperar-senha.css
@@ -1,44 +1,44 @@
 body {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  background-color: var(--theme);
 }
 
 .recup-senha {
-    margin: 10rem auto;
-    padding: 3rem;
-    text-align: center;
+  margin: 10rem auto;
+  padding: 3rem;
+  text-align: center;
 }
 
 h1 {
-    font-family: "Inter", sans-serif;
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: #F94949;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: #f94949;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .button-base {
-    margin-top: 15px;
-    height: 30px;
-    width: 100px;
+  margin-top: 15px;
+  height: 30px;
+  width: 100px;
 }
 
 .input-base {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 @media (min-width: 600px) {
-
-    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-    .recup-senha {
-        width: 25rem;
-    }
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .recup-senha {
+    width: 25rem;
+  }
 }
 
 @media (min-width: 800px) {
-
-    /* tablet, landscape iPad, lo-res laptops ands desktops */
-    .recup-senha {
-        width: 30rem;
-    }
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .recup-senha {
+    width: 30rem;
+  }
 }
