feat: fixed navbar

--- a/src/denuncias/denuncias.css
+++ b/src/denuncias/denuncias.css
@@ -4,11 +4,14 @@ body {
 }
 
 .denunciations {
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 3rem;
 }
 
-.denunciations header, .denunciations main {
+.denunciations header,
+.denunciations main {
   padding: 5px 30px 5px 30px;
 }
 
@@ -16,7 +19,6 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 600;
   font-size: 1.2rem;
-  text-align: center;
 }
 
 .form-search {
@@ -127,85 +129,4 @@ tr:nth-child(even) {
   justify-content: space-between;
   margin-top: 1.5rem;
   margin-bottom: 1.25rem;
-}
-
-@media (max-width: 400px) {
-  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  .denunciations {
-    width: 15rem;
-    height: 80vh;
-  }
-
-  .denunciations header, .denunciations main {
-    padding: 0px 0px 0px 0px;
-  }
-}
-
-@media (min-width: 400px) {
-  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  .denunciations {
-    width: 20rem;
-    height: 82vh;
-  }
-}
-
-@media (min-width: 600px) {
-  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  .denunciations {
-    width: 30rem;
-    height: 80vh;
-  }
-  .form-search .input-base {
-    width: 100%;
-    padding: 15px;  
-  }
-}
-
-@media (min-width: 800px) {
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
-  .denunciations {
-    width: 40rem;
-    height: 80vh;
-  }
-  .form-search form {
-    display: flex;
-    justify-content: left;
-  } 
-}
-
-@media (min-width: 1024px) {
-  /* big landscape tablets, laptops, and desktops */
-  .denunciations {
-    width: 55rem;
-    height: 80vh;
-  }
-  .form-search form {
-    display: flex;
-    justify-content: left;
-  }
-  .form-search .input-base {
-    width: 80%;
-    padding: 15px;  
-  }
-}
-
-@media (min-width: 1280px) {
-  .denunciations {
-    width: 65rem;
-    height:85vh;
-  }
-  .form-search form {
-    display: flex;
-    justify-content: left;
-  }
-  .form-search .input-base {
-    width: 80%;
-    padding: 15px;  
-  }
-  .denunciations header{
-    padding: 5px 120px 5px 120px;
-  }
-  .denunciations main {
-    padding: 0px 50px 0px 50px;
-  }
 }
