--- a/src/base.css
+++ b/src/base.css
@@ -10,8 +10,6 @@
 body {
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: var(--background);
 }
 
@@ -91,6 +89,8 @@ body {
   height: 100%;
   width: 7rem;
   padding: 1rem;
+  position: fixed;
+  left: 0;
 }
 
 .logo-nav {
@@ -142,31 +142,29 @@ body {
   text-shadow: rgba(0, 0, 0, 0.3) 0 0 1px;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-
-.app-container {
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
 .top-navbar {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  padding-right: 1rem;
-  height: 10%;
+  padding: 0.5rem 1rem 0.5rem 0rem;
   width: 100%;
   background-color: #ffffff;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-left: 9rem;
+}
+
+.app-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .top-navbar p {
@@ -184,16 +182,16 @@ body {
 }
 
 .card-app {
+  /* display: flex;
+  flex-direction: column; */
   background-color: #fff;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.25) 0 0 10px;
-  width: 80%;
-  height: 90%;
+  width: 90%;
+  /* height: auto; */
+  /* margin: auto; */
+  margin-top: 2rem;
   background-color: #ffffff;
-}
-
-svg:hover path {
-  fill: #fce57e;
 }
 
 .card-head-border {
