--- a/src/base.css
+++ b/src/base.css
@@ -203,3 +203,71 @@ body {
   height: 10%;
   background-color: #ecebeb;
 }
+
+.modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+  z-index: 1;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 20rem;
+  height: auto;
+  width: 35rem;
+  background-color: white;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px black;
+}
+
+.modal-container p {
+  background-color: none;
+}
+
+.close-modal {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: -1rem -1rem -1rem -1rem;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn-close-modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #fb3b3b;
+  color: #8d2424;
+}
+
+.btn-close-modal:hover {
+  background-color: #ff4949;
+}
+
+.modal-header {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 40px;
+  font-style: bold;
+}
+
+.modal-content {
+  margin: 2rem;
+  font-size: 20px;
+}
