--- a/src/denuncia-modal/denuncia-modal.css
+++ b/src/denuncia-modal/denuncia-modal.css
@@ -4,6 +4,8 @@ body {
 }
 
 .denunciations {
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 3rem;
 }
@@ -17,7 +19,6 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 600;
   font-size: 1.2rem;
-  text-align: center;
 }
 
 .form-search {
@@ -108,6 +109,11 @@ td {
   padding: 0.5rem 0;
 }
 
+td a {
+  color: black;
+  text-decoration: none;
+}
+
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
@@ -128,22 +134,4 @@ tr:nth-child(even) {
   justify-content: space-between;
   margin-top: 1.5rem;
   margin-bottom: 1.25rem;
-}
-
-.form-search form {
-  display: flex;
-  justify-content: left;
-}
-
-.form-search .input-base {
-  width: 80%;
-  padding: 15px;
-}
-
-.denunciations header {
-  padding: 5px 120px 5px 120px;
-}
-
-.denunciations main {
-  padding: 0px 50px 0px 50px;
 }
