--- a/src/denuncias/denuncias.css
+++ b/src/denuncias/denuncias.css
@@ -109,6 +109,11 @@ td {
   padding: 0.5rem 0;
 }
 
+td a {
+  color: black;
+  text-decoration: none;
+}
+
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
