--- a/src/template/template.html
+++ b/src/template/template.html
@@ -43,7 +43,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-app">
+      <div class="card-desktop">
         <!-- </div class="card-head-border">
           </div class="card-footer-border"> 
         
