--- a/src/minhas-denuncias/minhas-denuncias.css
+++ b/src/minhas-denuncias/minhas-denuncias.css
@@ -23,7 +23,7 @@
   line-height: 2em;
   padding-bottom: 10px;
   font-family: "Inter", sans-serif;
-  width: 55rem;
+  width: 85%;
   height: fit-content;
   min-height: 10rem;
 }
@@ -48,7 +48,7 @@
   line-height: 2em;
   padding-bottom: 10px;
   font-family: "Inter", sans-serif;
-  width: 55rem;
+  width: 85%;
   height: fit-content;
   min-height: 10rem;
 }
