--- a/src/minhas-denuncias/minhas-denuncias.css
+++ b/src/minhas-denuncias/minhas-denuncias.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  height: 80vh;
 }
 
 .denounce h1 {
@@ -91,38 +92,19 @@ button {
   font-weight: bolder;
 }
 
-.menu-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 10px;
-  width: 95%;
-  height: 7;
-  margin-bottom: 10px;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-  padding: 10px;
-}
 
 @media (min-width: 600px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  .sign-up {
-    width: 25rem;
-  }
+
 }
 
 @media (min-width: 800px) {
   /* tablet, landscape iPad, lo-res laptops ands desktops */
-  .sign-up {
-    width: 30rem;
-  }
+
 }
 
 @media (min-width: 1024px) {
   /* big landscape tablets, laptops, and desktops */
-  .sign-up {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
+
 }
+ 
