feat: remove mobile view

--- a/src/base.css
+++ b/src/base.css
@@ -35,7 +35,7 @@ body {
   color: #fff;
 }
 
-.card-mobile {
+.card-app {
   background-color: #fff;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
