--- a/src/denuncia-modal/denuncia-modal.css
+++ b/src/denuncia-modal/denuncia-modal.css
@@ -172,26 +172,24 @@ tr:nth-child(even) {
 }
 
 @media (max-width: 400px) {
+  .card-app {
+    width: 20rem;
+  }
   .modal-container {
     width: 15rem;
-
   }
-
   .denunciations {
     padding: 1rem 2rem 1rem 2rem;
     width: 15rem;
     height: 75vh;
   }
-
   table {
     margin-left: -0.6em;
   }
-
   .form-search .input-base {
     width: 100%;
     padding: 15px;
   }
-
   .card-mobile {
     display: flex;
     flex-direction: column;
@@ -202,36 +200,27 @@ tr:nth-child(even) {
 @media (max-width: 800px) {
   .modal-container {
     width: 17rem;
-
-
   }
-
   body {
+    margin: 0 auto;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #f94949;
-
   }
-
-  .left-navbar,
   .app {
+    margin-left: 0rem;
+  }
+  .left-navbar,
+  .top-navbar {
     display: none;
   }
-
   .denunciations main,
   .denunciations header {
     padding: 0;
   }
-
   .button-base {
     font-size: 0.6rem;
-  }
-}
-
-@media (min-width: 801px) {
-  .card-mobile {
-    display: none;
   }
 }
