--- a/src/usuario/usuario.css
+++ b/src/usuario/usuario.css
@@ -54,3 +54,11 @@
   border-radius: 10px;
   padding: 10px;
 }
+
+@media (min-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+}
+
+@media (min-width: 800px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
