--- a/src/criar-denuncia/criar-denuncia.css
+++ b/src/criar-denuncia/criar-denuncia.css
@@ -73,3 +73,11 @@
 #anexar {
   font-weight: bold;
 }
+
+@media (min-width: 400px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+}
+
+@media (min-width: 800px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
