--- a/src/base.css
+++ b/src/base.css
@@ -184,6 +184,12 @@ body {
   background-color: #ffffff;
 }
 
+.card-mobile {
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
+}
+
 .card-head-border {
   height: 20%;
   background-color: #ecebeb;
