--- a/src/adicionar-comentarios/adicionar-comentarios.css
+++ b/src/adicionar-comentarios/adicionar-comentarios.css
@@ -53,6 +53,10 @@
 }
 
 @media (min-width: 400px) {
+  .sign-up {
+    justify-items: center;
+  }
+
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
 
