--- a/src/recuperar-senha/recuperar-senha.css
+++ b/src/recuperar-senha/recuperar-senha.css
@@ -1,41 +1,85 @@
 body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
   background-color: var(--theme);
 }
 
-.recup-senha {
+.sign-up {
   margin: 10rem auto;
-  padding: 3rem;
+  padding: 5rem;
 }
 
-h1 {
+.sign-up p {
   font-family: "Inter", sans-serif;
   font-weight: 600;
   font-size: 1.2rem;
 }
 
-.button-base {
-  margin-top: 15px;
-  height: 30px;
-  width: 100px;
-  margin-left: 37px;
+.sign-up a {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  margin-top: 30px;
 }
 
-.input-base {
-  margin-top: 15px;
+.form-recupsenha {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.logout-nav {
-  margin-top: 270px;
+.form-container {
+  padding: 9rem auto;
+}
+
+.form-container p {
+  text-transform: uppercase;
+  margin: 1rem;
+}
+
+.form-container {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-container h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  margin-left: 5px;
 }
 
 @media (min-width: 600px) {
+
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .sign-up {
+    width: 25rem;
+  }
 }
+
 @media (min-width: 800px) {
+
   /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .sign-up {
+    width: 30rem;
+    height: max-content;
+  }
 }
+
 @media (min-width: 1024px) {
+
   /* big landscape tablets, laptops, and desktops */
+  .sign-up {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
