--- a/src/usuario/usuario.css
+++ b/src/usuario/usuario.css
@@ -1,13 +1,12 @@
 .user {
   background-color: white;
-  padding-top: 30px;
-  height: 70vh;
-  width: 70vw;
+  border-radius: 1rem;
   text-align: justify;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  padding: 2rem;
 }
 
 .user h1 {
