--- a/src/criar-denuncia/criar-denuncia.css
+++ b/src/criar-denuncia/criar-denuncia.css
@@ -77,7 +77,44 @@
   font-weight: bold;
 }
 
-@media (min-width: 400px) {
+@media (max-width: 600px) {
+  .app-container {
+
+    width: 25rem;
+
+    align-items: center;
+
+  }
+
+  .text {
+    width: 18rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .app-container {
+
+    width: 22rem;
+
+    align-items: center;
+
+
+  }
+
+  .text {
+    width: 15rem;
+    align-items: center;
+
+
+
+  }
+
+  .card-app {
+    align-items: center;
+    justify-content: center;
+  }
+
+
 
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
