feat: add pagination icon

--- a/src/admin/admin.css
+++ b/src/admin/admin.css
@@ -155,6 +155,20 @@ tr:nth-child(even) {
   margin-bottom: 1.25rem;
 }
 
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pagination p {
+  margin-right: 0.75rem;
+}
+
+.pagination img {
+  margin-bottom: 0.1rem;
+}
+
 @media (max-width: 400px) {
   .modal-container {
     width: 15rem;
