--- a/src/criar-denuncia/criar-denuncia.css
+++ b/src/criar-denuncia/criar-denuncia.css
@@ -10,6 +10,11 @@
   font-size: 1.2rem;
 }
 
+.input-base {
+  border: 1px solid #ceb8a7 !important;
+  height: auto;
+}
+
 .sign-up a {
   font-family: "Inter", sans-serif;
   font-weight: 400;
@@ -74,16 +79,15 @@
 }
 
 #anexar {
+  cursor: pointer;
   font-weight: bold;
 }
 
 @media (max-width: 600px) {
   .app-container {
-
     width: 25rem;
 
     align-items: center;
-
   }
 
   .text {
@@ -93,28 +97,20 @@
 
 @media (max-width: 400px) {
   .app-container {
-
     width: 22rem;
 
     align-items: center;
-
-
   }
 
   .text {
     width: 15rem;
     align-items: center;
-
-
-
   }
 
   .card-app {
     align-items: center;
     justify-content: center;
   }
-
-
 
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
