--- a/src/denuncia-modal/denuncia-modal.css
+++ b/src/denuncia-modal/denuncia-modal.css
@@ -187,9 +187,18 @@ tr:nth-child(even) {
   margin-bottom: 0.1rem;
 }
 
+.next-pagination {
+  cursor: pointer;
+}
+
+.menu-bar,
+.option-header {
+  display: none;
+}
+
 @media (max-width: 400px) {
   .card-app {
-    height: 85vh;
+    height: 95vh;
     padding-bottom: 1rem;
   }
   .modal-container {
@@ -210,6 +219,10 @@ tr:nth-child(even) {
 }
 
 @media (max-width: 800px) {
+  .menu-bar,
+  .option-header {
+    display: flex;
+  }
   .modal-container {
     width: 18rem;
   }
