--- a/src/adicionar-comentarios/adicionar-comentarios.css
+++ b/src/adicionar-comentarios/adicionar-comentarios.css
@@ -66,10 +66,23 @@
   align-items: flex-start;
 }
 
+.menu-bar,
+.option-header {
+  display: none;
+}
+
 @media (min-width: 400px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
 
-@media (min-width: 800px) {
+@media (max-width: 800px) {
+  .menu-bar,
+  .option-header {
+    display: flex;
+  }
+  .option-header {
+    width: 100%;
+    justify-content: flex-end;
+  }
   /* tablet, landscape iPad, lo-res laptops ands desktops */
 }
