--- a/src/usuario/usuario.css
+++ b/src/usuario/usuario.css
@@ -1,4 +1,5 @@
 .user {
+  height: 80vh;
   background-color: white;
   border-radius: 1rem;
   text-align: justify;
@@ -60,13 +61,25 @@
 
 .user-image {
   margin-left: 3rem;
+}
 
+.menu-bar,
+.option-header {
+  display: none;
 }
 
 @media (min-width: 400px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
 
-@media (min-width: 800px) {
+@media (max-width: 800px) {
   /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .menu-bar,
+  .option-header {
+    display: flex;
+  }
+  .option-header {
+    width: 100%;
+    justify-content: flex-end;
+  }
 }
